Fix: Improved rendering of the +/- show / hide icon using a monospace font for consistency - Courier New is used because it is common across platforms
- Most sans or serif fonts have the middle line on the + and the - at
  different heights which causes misalignment when flicking between them

Sync to source repo @3feaabe538be1347bf503d742e62b44a977c4fcb

--- a/css/responsive.dataTables.css
+++ b/css/responsive.dataTables.css
@@ -1,11 +1,21 @@
-table.dataTable.dtr-inline.collapsed > tbody > tr > td:first-child:not(.dataTables_empty),
-table.dataTable.dtr-inline.collapsed > tbody > tr > th:first-child:not(.dataTables_empty) {
+table.dataTable.dtr-inline.collapsed > tbody > tr > td.child,
+table.dataTable.dtr-inline.collapsed > tbody > tr > th.child,
+table.dataTable.dtr-inline.collapsed > tbody > tr > td.dataTables_empty {
+  cursor: default !important;
+}
+table.dataTable.dtr-inline.collapsed > tbody > tr > td.child:before,
+table.dataTable.dtr-inline.collapsed > tbody > tr > th.child:before,
+table.dataTable.dtr-inline.collapsed > tbody > tr > td.dataTables_empty:before {
+  display: none !important;
+}
+table.dataTable.dtr-inline.collapsed > tbody > tr > td:first-child,
+table.dataTable.dtr-inline.collapsed > tbody > tr > th:first-child {
   position: relative;
   padding-left: 30px;
   cursor: pointer;
 }
-table.dataTable.dtr-inline.collapsed > tbody > tr > td:first-child:not(.dataTables_empty):before,
-table.dataTable.dtr-inline.collapsed > tbody > tr > th:first-child:not(.dataTables_empty):before {
+table.dataTable.dtr-inline.collapsed > tbody > tr > td:first-child:before,
+table.dataTable.dtr-inline.collapsed > tbody > tr > th:first-child:before {
   top: 8px;
   left: 4px;
   height: 16px;
@@ -15,10 +25,11 @@ table.dataTable.dtr-inline.collapsed > tbody > tr > th:first-child:not(.dataTabl
   color: white;
   border: 2px solid white;
   border-radius: 16px;
-  text-align: center;
-  line-height: 14px;
   box-shadow: 0 0 3px #444;
   box-sizing: content-box;
+  font-family: 'Courier New', Courier, monospace;
+  text-indent: 4px;
+  line-height: 16px;
   content: '+';
   background-color: #31b131;
 }
@@ -30,18 +41,19 @@ table.dataTable.dtr-inline.collapsed > tbody > tr.parent > th:first-child:before
 table.dataTable.dtr-inline.collapsed > tbody > tr.child td:before {
   display: none;
 }
-table.dataTable.dtr-inline.collapsed.compact > tbody > tr > td:first-child:not(.dataTables_empty),
-table.dataTable.dtr-inline.collapsed.compact > tbody > tr > th:first-child:not(.dataTables_empty) {
+table.dataTable.dtr-inline.collapsed.compact > tbody > tr > td:first-child,
+table.dataTable.dtr-inline.collapsed.compact > tbody > tr > th:first-child {
   padding-left: 27px;
 }
-table.dataTable.dtr-inline.collapsed.compact > tbody > tr > td:first-child:not(.dataTables_empty):before,
-table.dataTable.dtr-inline.collapsed.compact > tbody > tr > th:first-child:not(.dataTables_empty):before {
+table.dataTable.dtr-inline.collapsed.compact > tbody > tr > td:first-child:before,
+table.dataTable.dtr-inline.collapsed.compact > tbody > tr > th:first-child:before {
   top: 5px;
   left: 4px;
   height: 14px;
   width: 14px;
   border-radius: 14px;
-  line-height: 12px;
+  line-height: 14px;
+  text-indent: 3px;
 }
 table.dataTable.dtr-column > tbody > tr > td.control,
 table.dataTable.dtr-column > tbody > tr > th.control {
@@ -61,10 +73,11 @@ table.dataTable.dtr-column > tbody > tr > th.control:before {
   color: white;
   border: 2px solid white;
   border-radius: 16px;
-  text-align: center;
-  line-height: 14px;
   box-shadow: 0 0 3px #444;
   box-sizing: content-box;
+  font-family: 'Courier New', Courier, monospace;
+  text-indent: 4px;
+  line-height: 16px;
   content: '+';
   background-color: #31b131;
 }
